Move and refactor code
Summary:

Moves some string manipulation code like humanify into folly

Moves hash-related functions into folly and removes some old includes
to clean up some code

Adds generic hashing for tuples, similar to pairs

Updates all of the build breakages from the above

Test Plan: run unit tests

Reviewed By: delong.j@fb.com

FB internal diff: D490478

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -52,6 +52,7 @@ nobase_follyinclude_HEADERS = \
 	IntrusiveList.h \
 	json.h \
 	Likely.h \
+	Logging.h \
 	Malloc.h \
 	MapUtil.h \
 	PackedSyncPtr.h \
