--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@ Makefile.in
 .libs
 .deps
 stamp-h1
-FormatTables.cpp
 folly-config.h
 _configs.sed
 aclocal.m4
@@ -15,6 +14,7 @@ build-aux
 libtool
 folly/test/gtest-1.6.0
 folly/folly-config.h
+folly/test/*_benchmark
 folly/test/*_test
 folly/test/*_test_using_jemalloc
 folly/config.*
@@ -24,3 +24,9 @@ folly/m4/ltoptions.m4
 folly/m4/ltsugar.m4
 folly/m4/ltversion.m4
 folly/m4/lt~obsolete.m4
+folly/generate_fingerprint_tables
+folly/FormatTables.cpp
+folly/EscapeTables.cpp
+folly/GroupVarintTables.cpp
+folly/FingerprintTables.cpp
+
