Unbreak folly build on fedora / ubuntu
Test Plan: built

Reviewed By: delong.j@fb.com

FB internal diff: D543320

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -105,7 +105,8 @@ libfolly_la_SOURCES = \
 	ThreadCachedArena.cpp \
 	Format.cpp \
 	FormatTables.cpp \
-	String.cpp
+	String.cpp \
+	Bits.cpp
 
 libfolly_la_LIBADD = $(BOOST_THREAD_LIB) -lpthread
 
