Add Bob Jenkins's SpookyHash to folly.
Summary:
http://burtleburtle.net/bob/hash/spooky.html
The code is in the public domain, so republishing it as such is fine.
The code needed modifications (the test was designed to run on Windows
only; removed unhygienic typedefs; moved to folly::hash namespace)

Also updated Makefile.am files.

Test Plan: test added

Reviewed By: soren@fb.com

FB internal diff: D549572

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -66,6 +66,7 @@ nobase_follyinclude_HEADERS = \
 	SmallLocks.h \
 	small_vector.h \
 	sorted_vector_types.h \
+	SpookyHash.h \
 	StlAllocator.h \
 	String.h \
 	String-inl.h \
@@ -106,7 +107,8 @@ libfolly_la_SOURCES = \
 	Format.cpp \
 	FormatTables.cpp \
 	String.cpp \
-	Bits.cpp
+	Bits.cpp \
+	SpookyHash.cpp
 
 libfolly_la_LIBADD = $(BOOST_THREAD_LIB) -lpthread
 
