Fix fedora / ubuntu build
Test Plan: yes

Reviewed By: andrewjcg@fb.com

FB internal diff: D558628

--- a/folly/test/Makefile.am
+++ b/folly/test/Makefile.am
@@ -174,7 +174,7 @@ cpuid_test_LDADD = libgtestmain.la $(top_builddir)/libfolly.la
 TESTS += cpuid_test
 
 spooky_hash_test_SOURCES = SpookyHashTest.cpp
-spooky_hash_test_LDADD = $(top_builddir)/libfolly.la
+spooky_hash_test_LDADD = -lrt $(top_builddir)/libfolly.la
 TESTS += spooky_hash_test
 
 check_PROGRAMS= $(TESTS)
