Fail the configure script if you don't have boost
Summary:
Discovered this while trying to build folly on OS X. It would print a
warning about Boost being missing that got drowned out in the rest of
the configure output, and then the build would fail. This makes the
failure more friendly.

Test Plan:
`autoreconf; ./configure` on a system without boost
installed; make sure configure fails and the last thing it prints is the
boost error message.

Reviewed By: delong.j@fb.com

FB internal diff: D797389

--- a/folly/configure.ac
+++ b/folly/configure.ac
@@ -30,7 +30,8 @@ AC_CHECK_LIB([gflags],[getenv],[],[AC_MSG_ERROR(
              [Please install google-gflags library])])
 
 # check for boost libs
-AX_BOOST_BASE
+AX_BOOST_BASE([1.20.0], [], [AC_MSG_ERROR(
+              [Please install boost >= 1.20.0 (thread, regex, and system)])])
 AX_BOOST_THREAD
 AX_BOOST_REGEX
 AX_BOOST_SYSTEM
