fix folly Range compilation on FreeBSD
Summary: - memrchr is GNU + Linux specific, it turns out

Test Plan: - compiled on FreeBSD, contbuild

Reviewed By: delong.j@fb.com

FB internal diff: D900935

--- a/folly/configure.ac
+++ b/folly/configure.ac
@@ -86,7 +86,8 @@ AC_CHECK_FUNCS([getdelim \
                 pthread_yield \
                 rallocm \
                 malloc_size \
-                malloc_usable_size])
+                malloc_usable_size \
+                memrchr])
 
 if test "$ac_cv_func_pthread_yield" = "no"; then
    AC_CHECK_HEADERS([sched.h])
