--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -112,8 +112,6 @@ libfolly_la_SOURCES = \
 	SpookyHashV1.cpp \
 	SpookyHashV2.cpp
 
-libfolly_la_LIBADD = $(BOOST_THREAD_LIB) -lpthread
-
 FingerprintTables.cpp: generate_fingerprint_tables
 	./generate_fingerprint_tables
 
@@ -122,7 +120,7 @@ libfollyfingerprint_la_SOURCES = \
 libfollyfingerprint_la_LIBADD = libfolly.la
 
 libfollybenchmark_la_SOURCES = Benchmark.cpp
-libfollybenchmark_la_LIBADD = $(BOOST_REGEX_LIB) -lrt libfolly.la
+libfollybenchmark_la_LIBADD = -lrt libfolly.la
 
 libfollytimeout_queue_la_SOURCES = TimeoutQueue.cpp
 libfollytimeout_queue_la_LIBADD = libfolly.la
