Use Mach built-ins in lieu of clock_gettime(3) and friends.
Summary:
- Mach doesn't support clock_getres(3) or clock_gettime(3). Provide our
own implementations by wrapping mach_timebase_info() and
mach_absolute_time().
- Detect availability of of -lrt at configure time and don't link with
it if it's not available. On Linux, this is what provides
clock_gettime(3) and friends.

Test Plan:
- fbconfig -r folly && fbmake runtests
- ./configure && make check on Ubuntu/FC/Mac

Reviewed By: meyering@fb.com

FB internal diff: D999131

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -112,6 +112,11 @@ libfolly_la_SOURCES = \
 	SpookyHashV1.cpp \
 	SpookyHashV2.cpp
 
+if !HAVE_LINUX
+nobase_follyinclude_HEADERS += detail/Clock.h
+libfolly_la_SOURCES += detail/Clock.cpp
+endif
+
 FingerprintTables.cpp: generate_fingerprint_tables
 	./generate_fingerprint_tables
 
@@ -120,7 +125,7 @@ libfollyfingerprint_la_SOURCES = \
 libfollyfingerprint_la_LIBADD = libfolly.la
 
 libfollybenchmark_la_SOURCES = Benchmark.cpp
-libfollybenchmark_la_LIBADD = -lrt libfolly.la
+libfollybenchmark_la_LIBADD = libfolly.la
 
 libfollytimeout_queue_la_SOURCES = TimeoutQueue.cpp
 libfollytimeout_queue_la_LIBADD = libfolly.la
