Handle lack of weak symbols on some platforms
Summary:
- It turns out that it's not always desirable to perform runtime
resolution of weak symbols. For example, on iOS, weak symbols are
resolved at runtime only if *all* symbol resolution is deferred util
then, which is undesirable for othe reasons. Detect such platforms at
configure time and use that information to populate detail/Malloc.h
with the correct declarations: weak symbols or extern symbols with
a value of nullptr.

Test Plan:
- fbconfig -r folly && fbmake runtests
- ./configure && make check on Ubuntu/FC/Mac

Reviewed By: andrei.alexandrescu@fb.com

FB internal diff: D1002959

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -39,6 +39,7 @@ nobase_follyinclude_HEADERS = \
 	detail/FingerprintPolynomial.h \
 	detail/Futex.h \
 	detail/GroupVarintDetail.h \
+	detail/Malloc.h \
 	detail/MPMCPipelineDetail.h \
 	detail/SlowFingerprint.h \
 	detail/Stats.h \
@@ -159,6 +160,10 @@ libfolly_la_SOURCES = \
 if !HAVE_LINUX
 nobase_follyinclude_HEADERS += detail/Clock.h
 libfolly_la_SOURCES += detail/Clock.cpp
+endif
+
+if !HAVE_WEAK_SYMBOLS
+libfolly_la_SOURCES += detail/Malloc.cpp
 endif
 
 FingerprintTables.cpp: generate_fingerprint_tables
