Import ax_boost_system.m4, link generate_fingerprint_tables with boost_system.
generate_fingerprint_tables uses boost::system::error_category and others
so it needs to be linked with libboost_system. Find libboost_system and link
it.

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -4,7 +4,7 @@ ACLOCAL_AMFLAGS = -I m4
 
 noinst_PROGRAMS = generate_fingerprint_tables
 generate_fingerprint_tables_SOURCES = build/GenerateFingerprintTables.cpp
-generate_fingerprint_tables_LDADD = libfolly.la
+generate_fingerprint_tables_LDADD = libfolly.la $(BOOST_SYSTEM_LIB)
 
 lib_LTLIBRARIES = \
 	libfolly.la \
