Detect C++ implementations that support constexpr strlen()
Summary:
- Only declare the Range constructor as a constexpr if strlen() is also
a constexpr. Otherwise, we'll get compilation errors.

Test Plan:
- fbconfig -r folly && fbmake runtests
- ./configure && make check on Ubuntu/FC/Mac

Reviewed By: soren@fb.com

FB internal diff: D1003124

--- a/folly/configure.ac
+++ b/folly/configure.ac
@@ -89,6 +89,13 @@ AC_COMPILE_IFELSE(
 
 AC_COMPILE_IFELSE(
   [AC_LANG_SOURCE[
+    #include <cstring>
+    static constexpr int val = strlen("foo");]],
+  [AC_DEFINE([HAVE_CONSTEXPR_STRLEN], [1],
+             [Define to 1 if strlen(3) is constexpr.])])
+
+AC_COMPILE_IFELSE(
+  [AC_LANG_SOURCE[
     #include <type_traits>
     #if !_LIBCPP_VERSION
     #error No libc++
