Add missing files to Makefile headers
Summary:
This two header files are missing from the Makefile which make the
open source version broken.

Test Plan: code using open source version compiles

Reviewed By: meyering@fb.com

FB internal diff: D1050326

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -29,6 +29,8 @@ nobase_follyinclude_HEADERS = \
 	ConcurrentSkipList.h \
 	ConcurrentSkipList-inl.h \
 	Conv.h \
+	CpuId.h \
+	CPortability.h \
 	detail/AtomicHashUtils.h \
 	detail/BitIteratorDetail.h \
 	detail/BitsDetail.h \
