Add generated files to Makefile.am
Summary: Missed these on the first pass because they're generated

Test Plan: Built open source folly, links

Reviewed By: pgriess@fb.com

FB internal diff: D1062451

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -132,11 +132,13 @@ libfolly_la_SOURCES = \
 	Bits.cpp \
 	Conv.cpp \
 	dynamic.cpp \
+	EscapeTables.cpp \
 	File.cpp \
 	FileUtil.cpp \
 	Format.cpp \
 	FormatTables.cpp \
 	GroupVarint.cpp \
+	GroupVarintTables.cpp \
 	io/IOBuf.cpp \
 	io/IOBufQueue.cpp \
 	io/RecordIO.cpp \
