Add missing Exception.h line to Makefile.am
nobase_follyinclude_HEADERS in Makefile.am should contain:
Exception.h \

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -53,6 +53,7 @@ nobase_follyinclude_HEADERS = \
 	DynamicConverter.h \
 	dynamic.h \
 	dynamic-inl.h \
+	Exception.h \
 	FBString.h \
 	FBVector.h \
 	File.h \
