Make Folly cpp_library targets more granular
Summary:
- Some users of Folly don't want to pull in the entire library just to
use one feature (e.g. folly::to<T>). Throw those users a bone by
breaking Folly up into a few discrete chunks: :uri, :range, :string,
:format, etc. Leave the top-level :folly target alone so that existing
users don't have to be changed.
- Update some Thrift and Proxygen users to use the more granular
targets.

Test Plan: - Phabricator contbuild

Reviewed By: tudorb@fb.com

FB internal diff: D1192765

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -162,6 +162,7 @@ libfolly_la_SOURCES = \
 	Benchmark.cpp \
 	Bits.cpp \
 	Conv.cpp \
+	Demangle.cpp \
 	detail/CacheLocality.cpp \
 	dynamic.cpp \
 	EscapeTables.cpp \
